fixed header spacing for small screen

--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -13,6 +13,13 @@
     font-size: 90px;
 }
 
-.app__header-img{
+.app__header-img img{
     width: 80%;
+}
+
+@media (max-width: 768px) {
+    .app__header-h1 {
+        font-size: 50px;  /* Decrease font size */
+        line-height: 70px; /* Decrease line height */
+    }
 }
